# punc-ct-transformer.axera

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md  build.sh  toolchain-aarch64.cmake
cpp/examples/: demo.cpp
cpp/include/: punctuation_runner.h
cpp/src/: punctuation_runner.cpp
model_convert/: README.md  compile_pulsar2.sh  export_onnx.py  generate_calib_data.py  model_meta.json  pulsar2_config.json  requirements.txt
python/: README.md  example.py  requirements.txt
python/sherpa_punct_sdk/: __init__.py  example.py  inference.py  pipeline.py  postprocess.py  preprocess.py  requirements.txt
reports/: compile_report.md  export_report.md  performance_report.md  runonboard_report.md  simulate_report.md
test_data/: cases.json  gt_logits_0.npy  gt_logits_1.npy  gt_logits_2.npy  gt_logits_3.npy  gt_text_0.txt  gt_text_1.txt  gt_text_2.txt  gt_text_3.txt  gt_text_4.txt  input_0.npy  input_1.npy  input_2.npy  input_3.npy  meta.json  regression_test.py  tokens_0.npy  tokens_1.npy  tokens_2.npy  tokens_3.npy
